<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Back button -->
        <Button
            android:id="@+id/back_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:padding="10dp"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Title TextView -->
        <TextView
            android:id="@+id/currentFacilityDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Facility Details"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/back_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Facility Name LinearLayout -->
        <LinearLayout
            android:id="@+id/nameDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/currentFacilityDetailsTextView"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Name: " />

            <EditText
                android:id="@+id/editFacilityNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Facility Location LinearLayout -->
        <LinearLayout
            android:id="@+id/locationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/nameDetails"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Location: " />

            <EditText
                android:id="@+id/editFacilityLocationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Save Button -->
        <Button
            android:id="@+id/save_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="Save"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/locationDetails"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
